completed the full cv

--- a/cv.tex
+++ b/cv.tex
@@ -14,22 +14,21 @@
 
 \firstname{Anuvrat}
 \familyname{Parashar}
-\title{CS Graduate, Lnux Geek, Foss Enthusiast}
+\title{CS Graduate, Linux Geek, Foss Enthusiast}
 %%\address{Room 203A, Hostel 2} {Amity University, Sector 125, Noida}
 \mobile{+91-9910589350}
 \email{anuvrat@anuvrat.in}
 \homepage{anuvratparashar.com}
 
 \begin{document}
-
 \maketitle
-\input{objective.tex}
-\input{education.tex}
+\input{objective.tex}\\
+\input{education.tex}\\
 \input{skillset.tex}
 \input{workex.tex}
-\input{projects.tex}
-\input{eventsAndTalks.tex}
-\input{hobbiesAndInterests.tex}
-\input{personalDetails.tex}
+\input{projects.tex}\\
+\input{eventsAndTalks.tex}\\
+\input{hobbiesAndInterests.tex}\\
+\input{personalDetails.tex}\\
 
 \end {document}
