--- a/objective.tex
+++ b/objective.tex
@@ -1,2 +1,2 @@
 \section {Objective}
-\cvlistitem {To work in an environment demanding technical, programming, communication and functional expertise for facing and overcoming everyday challenges which require me to be up-to-date with technology and continuously strive for enhancing my skills so that I can contribute substancially to the growth of the organisation.}
+\cvlistitem {To work in an environment demanding technical, programming, communication and functional expertise for facing and overcoming everyday challenges which require me to be up-to-date with technology and continuously strive for enhancing my skills so that I can contribute substancially to the growth of the organisation.}\\
