--- a/cv.tex
+++ b/cv.tex
@@ -4,7 +4,7 @@
 
 \usepackage[utf8]{inputenc} % character encoding
 %\usepackage[top=2.5cm, bottom=2.5cm, left=3cm, right=3cm]{geometry}
-\usepackage[scale=0.8]{geometry} % adjust the page margins
+\usepackage[scale=0.87]{geometry} % adjust the page margins
 
 \AtBeginDocument{\setlength{\maketitlenamewidth}{10cm}}
 \AtBeginDocument{\recomputelengths}                     % required when changes are made to page layout lengths
@@ -22,13 +22,13 @@
 
 \begin{document}
 \maketitle
-\input{objective.tex}\\
+
+%% \input{objective.tex}\\
 \input{education.tex}\\
 \input{skillset.tex}
 \input{workex.tex}
-\input{projects.tex}\\
-\input{eventsAndTalks.tex}\\
-\input{hobbiesAndInterests.tex}\\
-\input{personalDetails.tex}\\
-
+%% \input{projects.tex}\\
+%% \input{eventsAndTalks.tex}\\
+\input{hobbiesAndInterests.tex}
+%% \input{personalDetails.tex}\\
 \end {document}
