--- a/cv.tex
+++ b/cv.tex
@@ -3,7 +3,7 @@
 
 \usepackage[utf8]{inputenc} % character encoding
 %\usepackage[top=2.5cm, bottom=2.5cm, left=3cm, right=3cm]{geometry}
-\usepackage[scale=0.8]{geometry} % adjust the page margins
+\usepackage[scale=0.85]{geometry} % adjust the page margins
 
 \AtBeginDocument{\setlength{\maketitlenamewidth}{10cm}}
 \AtBeginDocument{\recomputelengths}                     % required when changes are made to page layout lengths
@@ -13,7 +13,7 @@
 
 \firstname{Anuvrat}
 \familyname{Parashar}
-\title{CS Graduate, Linux Geek, Foss Enthusiast}
+\title{CS Graduate, Linux Geek, FOSS Enthusiast}
 %%\address{Room 203A, Hostel 2} {Amity University, Sector 125, Noida}
 \mobile{+91-9910589350}
 \email{anuvrat@anuvrat.in}
