one page cv, name width increased to 12

--- a/cv.tex
+++ b/cv.tex
@@ -6,7 +6,7 @@
 %\usepackage[top=2.5cm, bottom=2.5cm, left=3cm, right=3cm]{geometry}
 \usepackage[scale=0.87]{geometry} % adjust the page margins
 
-\AtBeginDocument{\setlength{\maketitlenamewidth}{10cm}}
+\AtBeginDocument{\setlength{\maketitlenamewidth}{12cm}}
 \AtBeginDocument{\recomputelengths}                     % required when changes are made to page layout lengths
 
 \newcommand\mybitem[1]{%
@@ -14,7 +14,7 @@
 
 \firstname{Anuvrat}
 \familyname{Parashar}
-\title{CS Graduate, Linux Geek, Foss Enthusiast}
+\title{CS Graduate, Linux Geek, FOSS Enthusiast}
 %%\address{Room 203A, Hostel 2} {Amity University, Sector 125, Noida}
 \mobile{+91-9910589350}
 \email{anuvrat@anuvrat.in}
